--- a/logging.yml
+++ b/logging.yml
@@ -33,6 +33,6 @@ loggers:
         propagate: False
         level: INFO
     zipkin:
-        handlers: [json]
-        propagate: False
+        handlers: [console, json]
+        propagate: True
         level: INFO
