--- a/logging.yml
+++ b/logging.yml
@@ -2,18 +2,18 @@ version: 1
 disable_existing_logers: False
 formatters:
     verbose:
-        format: '%(asctime)s %(process)d %(levelname)s %(name)s %(thread)d %(message)s'
+        format: '%(asctime)s -- %(process)d %(levelname)s %(name)s %(thread)d %(message)s'
     simple:
         format: '%(levelname)s %(message)s'
     json:
         (): ethicall_common.loggers.JsonFormatter
 handlers:
     console:
-        level: INFO
+        level: DEBUG
         class: logging.StreamHandler
         formatter: verbose
     json:
-        level: INFO
+        level: DEBUG
         class: logging.StreamHandler
         formatter: json
     redis:
@@ -26,13 +26,13 @@ handlers:
 loggers:
     root:
         handlers: [console]
-        propagate: False
-        level: INFO
+        propagate: True
+        level: DEBUG
     sanic:
         handlers: [console]
-        propagate: False
-        level: INFO
-    zipkin:
-        handlers: [console, json]
         propagate: True
-        level: INFO
+        level: DEBUG
+    zipkin:
+        handlers: [json]
+        propagate: True
+        level: DEBUG
