--- a/examples/docker-compose-cluster.yml
+++ b/examples/docker-compose-cluster.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: "postgres:9.6"
+    image: "postgres:10.6-alpine"
     ports:
       - "5432:5432"
     networks:
